Continuamos el desarrollo en la rama master

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Archivo de github</h1>
 <p>Primera verison del documento</p>
 <p>Segunda version del documento</p>
+<p>Continuamos el desarrollo en la rama master</p>
